# jolt-raylib-hello-world

./: .clang-format  .clang-tidy  .clangd  .cz.json  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dependencies.cmake  README.md  _typos.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  documentation.yml  links.yml  macos.yml  pre-commit.yml  scorecard.yml  typos.yml  ubuntu.yml  windows.yml
Catch_tests/: CMakeLists.txt  test.cpp
cmake/: StaticAnalysers.cmake  coverage.cmake
src/: constants.h  main.cpp  physics.cpp  physics.h
src/game/: game.cpp  game.h
